Fix header link spacing

--- a/docs/style.css
+++ b/docs/style.css
@@ -37,7 +37,7 @@ body {
   margin-right: 8px;
 }
 
-#header-right > * {
+#header-right > * + * {
   margin-left: 8px;
 }
 
